bugfix - noņemtas nevajadzīgās kolonnas piešķiršanas tabulā, noņemts overflow:auto tabulai

--- a/sys/web/css/site.css
+++ b/sys/web/css/site.css
@@ -167,9 +167,9 @@ a.desc:after {
 .sort-ordinal a.desc:after {
     content: "\e156";
 }
-.grid-view {
+/* .grid-view {
     overflow-x:auto;
-}
+} */
 
 .grid-view th {
     white-space: nowrap;
